--- a/bistro/bgnews.html
+++ b/bistro/bgnews.html
@@ -16,10 +16,11 @@
     <h1>The Black Goose Bistro News</h1>
     <nav>
         <ul>
-            <li>Home</li>
+            <li><a HREF="index.html">Home</a></li>
             <li>Menu</li>
             <li>News</li>
             <li>Contact</li>
+            <li><a HREF="cooking.html">Cooking with Daniel</a></li>
         </ul>
     </nav>
 </header>
