--- a/bistro/bgnews.html
+++ b/bistro/bgnews.html
@@ -18,7 +18,7 @@
         <ul>
             <li><a HREF="index.html">Home</a></li>
             <li>Menu</li>
-            <li>News</li>
+            <li style="color: grey; >News</li>
             <li>Contact</li>
             <li><a HREF="cooking.html">Cooking with Daniel</a></li>
         </ul>
