--- a/bistro/cooking.html
+++ b/bistro/cooking.html
@@ -30,6 +30,15 @@
 
 <body>
 <h1>Cooking with Daniel from Nada Surf</h1>
+<nav>
+        <ul>
+            <li><a HREF="index.html">Home</a></li>
+            <li>Menu</li>
+            <li><a HREF="bgnews.html">News</a></li>
+            <li>Contact</li>
+            <li style="color: grey;">Cooking with Daniel</li>
+        </ul>
+</nav>
 
 <p>I had the pleasure of spending a crisp, Spring day in Portsmouth, NH cooking and chatting with Daniel Lorca of the band Nada Surf as he prepared a gourmet, sit-down dinner for 28 pals.</p>
 
